@@ -8,7 +8,6 @@
 (autoload 'py-shell "python-mode" "Start an interactive Python interpreter in another window." t)
 
 (add-to-list 'auto-mode-alist '("\\.py$" . python-mode))
-(add-to-list 'auto-mode-alist '("\\.doctest$" . doctest-mode))
 
 (add-to-list 'interpreter-mode-alist '("python" . python-mode))
 (add-to-list 'interpreter-mode-alist '("jython" . jython-mode))
