@@ -2,6 +2,16 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Mar 2009; Christian Faulhammer <fauli@gentoo.org>
+  files/61python-mode-gentoo.el, python-mode-5.1.0.ebuild:
+  import KEYWORDS from tree and remove doctest-mode from SITEFILE
+
+  08 Feb 2009; Christian Faulhammer <fauli@gentoo.org>
+  python-mode-5.1.0.ebuild:
+  use EAPI=2 for SRC_URI redirection, so we have a versioned DISTFILE on the
+  local disk, this still saves us the src_unpack() function without the
+  hassle of self-created distfile
+
   07 Feb 2009; Ulrich Mueller <ulm@gentoo.org> python-mode-5.1.0.ebuild:
   Remove unused flag from IUSE. Use versioned distfile.
 
